tests/fixtures/fail/preset-nuxt3/components/button.vue
<template>
  <button>Should be PascalCase</button>
</template>
